<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_12"
            android:gravity="center_horizontal"
            android:text="@string/login_info_text"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/login_info_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_12"
            android:layout_marginStart="@dimen/spacing_12"
            android:layout_marginTop="@dimen/spacing_16"
            android:backgroundTint="@color/colorBlack50"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorBlack50"/>

        <EditText
            android:id="@+id/login_info_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_12"
            android:layout_marginStart="@dimen/spacing_12"
            android:layout_marginTop="@dimen/spacing_16"
            android:backgroundTint="@color/colorBlack50"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorBlack50"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_info_send_btn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/send_email_btn_text"
        android:textColor="@android:color/white"/>
</RelativeLayout>